Implement learningg (#5)
